# workshop-jupyter-kedro

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  OpenRepair quick EDA.ipynb  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_processing.yml
conf/base/parameters/: data_processing.yml
data/: README.md
data/01_raw/: README.md
notebooks/: OpenRepair quick EDA.ipynb  data-science.ipynb
src/openrepair/: __init__.py  pipeline_registry.py  settings.py
src/openrepair/pipelines/data_processing/: README.md  __init__.py  nodes.py  pipeline.py
src/openrepair/pipelines/data_science/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/pipelines/data_processing/: test_pipeline.py
src/tests/pipelines/data_science/: test_pipeline.py
