[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openrepair"
authors = [{name = "Juan Luis", email = "juan_luis_cano@mckinsey.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "kedro @ git+https://github.com/kedro-org/kedro@3ea7231",
    "kedro-datasets[pandas.CSVDataSet,polars.CSVDataSet]==1.3.0",
]

[tool.kedro]
package_name = "openrepair"
project_name = "openrepair"
kedro_init_version = "0.18.8"
