[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openrepair"
authors = [{name = "Juan Luis", email = "juan_luis_cano@mckinsey.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "kedro~=0.18.13",
    "kedro-datasets[polars,matplotlib]~=1.7",
    "wordcloud",
]

[tool.kedro]
package_name = "openrepair"
project_name = "openrepair"
kedro_init_version = "0.18.13"
